# butterfly-osm

./: .env  .env.example  .gitignore  AUTOMATED_RELEASE_PROCESS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.tools  ENHANCEMENT_VERIFICATION.md  MIGRATION_ANNOUNCEMENT.md  MIGRATION_STATE.md  MIGRATION_SUMMARY.md  Makefile  PLAN.md  PLAN_TODO.md  PUBLISH_COMMANDS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REPOSITORY_TRANSITION.md  TODO.md  TOOL_TEMPLATE.md  build-release-assets.sh  build.rs  build.sh  competitive_landscape.md  docker-compose.yml  jodoigne_isochrones.html  publish.sh  todo_immediate.md  todo_overall.md
butterfly-common/: Cargo.toml  README.md
butterfly-common/src/: error.rs  fuzzy.rs  lib.rs
butterfly-extract/: Cargo.toml
butterfly-extract/src/: coarsening.rs  lib.rs  pbf.rs  sieve.rs  telemetry.rs
butterfly-geometry/: Cargo.toml
butterfly-geometry/src/: delta.rs  lib.rs  pipeline.rs  resample.rs  simplify.rs  traits.rs
butterfly-io/: Cargo.toml
butterfly-io/src/: compression.rs  error.rs  external_sort.rs  format.rs  io.rs  lib.rs  loser_tree.rs  roundtrip.rs  token_bucket.rs
butterfly-plan/: Cargo.toml
butterfly-plan/src/: adaptive.rs  cli.rs  config.rs  fuzzing.rs  lib.rs  main.rs  memory.rs  planner.rs
butterfly-routing/: Cargo.toml
butterfly-routing/src/: cch_customization.rs  cch_ordering.rs  cch_query.rs  dijkstra.rs  dual_core.rs  graph.rs  lib.rs  load_testing.rs  profiles.rs  prs_v2.rs  prs_v3.rs  prs_v4_simple.rs  prs_v5.rs  sharded_caching.rs  spatial.rs  thread_architecture.rs  time_routing.rs  turn_restriction_tables.rs  weight_compression.rs
butterfly-serve/: Cargo.toml
butterfly-serve/src/: lib.rs  openapi.rs  routes.rs  server.rs
butterfly-test/: Cargo.toml
butterfly-test/src/: benchmarks.rs  corpus.rs  generators.rs  lib.rs
geocode/: .gitignore  Cargo.toml  Dockerfile  README.md
geocode-research/router-features/: Cargo.toml
geocode-research/router-features/artifacts/: ablation.tsv  accuracy_vs_features.tsv  accuracy_vs_features_per_country.tsv  accuracy_vs_features_per_family.tsv  bench-extraction.json  extractor.spec.json  features.tsv  knee-classifier.json
geocode-research/router-features/src/: corpus.rs  lib.rs  packs.rs
geocode-research/scratch-burn/: Cargo.toml
geocode-research/scratch-burn/src/: main.rs
geocode-research/scratch-candle/: Cargo.toml
geocode-research/scratch-candle/src/: main.rs
geocode-research/scratch-gbdt/: Cargo.toml
geocode-research/scratch-gbdt/src/: main.rs
geocode-training/corpus-gen/: Cargo.toml
geocode-training/corpus-gen/morphology/: at.toml  au.toml  be.toml  br.toml  ch.toml  de.toml  es.toml  fr.toml  gb.toml  in.toml  it.toml  jp.toml  lu.toml  nl.toml  us.toml
geocode-training/corpus-gen/src/: augment.rs  bench_queries.rs  bio.rs  canary.rs  gold.rs  main.rs  morphology.rs  output.rs
geocode-training/phase2/: Cargo.toml
geocode-training/phase2/src/: augment.rs  bin_corpus.rs  bin_label.rs  lib.rs  sample.rs
geocode/data/models/: .gitkeep  belgium-large.safetensors.config.json  belgium-prod.safetensors  belgium-prod.safetensors.config.json  belgium-tiny.safetensors  belgium-tiny.safetensors.config.json  multi-country-large.safetensors.config.json  rerank-belgium-prod.gbdt  rerank-belgium-tiny.gbdt  rerank-multi-country.gbdt  retrieval-utility-belgium-tiny.gbdt
geocode/data/packs/: README.md  at.toml  au.toml  be.toml  br.toml  ch.toml  de.toml  es.toml  fr.toml  gb.toml  in.toml  it.toml  jp.toml  lu.toml  nl.toml  us.toml
geocode/data/proof/: 00-auto-routing.txt  01-belgium.txt  02-us.txt  03-jp.txt  04-br.txt  05-in.txt  06-au.txt  10-belgium-openaddresses.txt  11-us-dc-openaddresses.txt  81-at-shard.txt  81-au-shard.txt  81-be-merged-oa-osm-shard.txt  81-be-shard.txt  81-ch-shard.txt  81-de-shard.txt  81-es-shard.txt  81-fr-shard.txt  81-gb-shard.txt  81-in-shard.txt  81-it-shard.txt  81-jp-shard.txt  81-lu-merged-oa-osm-shard.txt  81-lu-shard.txt  81-nl-shard.txt  81-us-shard.txt  99-rss-measurement.txt
geocode/data/shards/: MANIFEST.toml
geocode/eval/: parser_belgium.jsonl
geocode/src/: lib.rs  main.rs  types.rs
geocode/src/confidence/: features.rs  gbdt.rs  mod.rs  thresholds.rs  training.rs
geocode/src/control/: admission.rs  budget.rs  fanout.rs  metrics_channels.rs  metrics_general.rs  metrics_routing.rs  mod.rs
geocode/src/geocoder/: channels.rs  cost.rs  executor.rs  mod.rs  program.rs  recall.rs  rerank.rs
geocode/src/index/: build.rs  mod.rs  read.rs  stats.rs
geocode/src/osm_extract/: mod.rs
geocode/src/parser/: anchor.rs  beam.rs  decoding.rs  heuristic.rs  mod.rs  neural.rs  normalize.rs  (+3 more)
geocode/tests/: axum_e2e.rs  belgium_e2e.rs  bosa_e2e.rs  clean_query_allocs.rs  control_clean_query_alloc.rs  control_fanout.rs  flight_e2e.rs  multi_country_e2e.rs  openaddresses_e2e.rs  prod_hardening.rs  recall_rerank_e2e.rs  serve_the_world.rs  shard_smoke.rs
route/: Cargo.toml  README.md
route/docs/: 146-empirical-sharing.md  146-topology-diff-belgium.json  152-redux-results.md  153-consumer-audit.md  153-results.md  154-design.md  154-results.md  155-consumer-audit.md  155-design.md  155-results.md  160-bench.sh  160-results.md  188-fix-results.md  91-loader-results.md  91-overlay-design.md  91-overlay-results.md
route/src/: calibrate.rs  cli.rs  contraction.rs  customization.rs  density.rs  lib.rs  main.rs  ordering.rs  ordering_lifted.rs  pack.rs  profile_abi.rs  traffic.rs  weights.rs
route/tests/: cross_region_synthetic.rs  lazy_crc_corruption.rs  map_match_cross_region.rs  map_match_cross_region_bench.rs  multi_region.rs  stib_epip_availability.rs  topology_grouping.rs  transit_integration.rs
tools/butterfly-dl/: CHANGELOG.md  Cargo.toml  Makefile  README.md  butterfly-dl.pc.in
tools/butterfly-route/: BASELINE.md  CHANGELOG.md  CH_TESTING.md  Cargo.toml  END_GOAL.md  ISSUES.md  PHAST_DESIGN.md  PHAST_IMPLEMENTATION_STATUS.md  PLAN.md  README.md
tools/butterfly-shrink/: .gitignore  CHANGELOG.md  Cargo.toml  ISSUES.md  PLAN.md  README.md  build.rs
(+652 files in other folders)
