[workspace]
resolver = "2"
members = [
    "butterfly-common",
    "dl",
    "route",
]

[workspace.package]
version = "2.0.0"
authors = ["Pierre <pierre@warnier.net>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/butterfly-osm/butterfly-osm"
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
tokio = { version = "1.51", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["stream"] }
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0.18"
env_logger = "0.11.10"
indicatif = "0.18"
strsim = "0.11.1"
tempfile = "3.27"
# Dev dependencies
wiremock = "0.6.5"
ctor = "0.10"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
redundant_closure = "allow"
# Rust 1.94 / clippy 1.94 suggests migrating nested `if let` to let-chain
# syntax via `collapsible_if`. Pure style change, tracked separately from
# the toolchain bump.
collapsible_if = "allow"
