[workspace]
resolver = "2"
members = [
    "butterfly-common",
    "dl",
    "route",
]

[workspace.package]
version = "2.0.0"
authors = ["Pierre <pierre@warnier.net>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/butterfly-osm/butterfly-osm"
edition = "2024"
rust-version = "1.95"

[workspace.dependencies]
tokio = { version = "1.51", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["stream"] }
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0.18"
env_logger = "0.11.10"
indicatif = "0.18"
strsim = "0.11.1"
tempfile = "3.27"
# Dev dependencies
wiremock = "0.6.5"
ctor = "0.10"

[workspace.lints.rust]
# Ship-readiness policy: every warning is a build failure. `warnings = "deny"`
# already covers `dead_code`, `unused_*`, etc., but we name the ones the audit
# called out explicitly so they're not silently relaxed by a future edit.
warnings = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"
# `unsafe_code` is denied workspace-wide. **Sole carveout: file-backed
# read-only memory mapping via `memmap2::Mmap::map`** (file's bytes can
# mutate from outside the process, so Rust can't prove the lifetime
# contract — the safety guarantee comes from how we use it: read-only,
# Arc-owned, slices borrowed through accessor methods). That carveout
# is implemented as a single, narrowly-scoped `#[allow(unsafe_code)]`
# at the mmap call site (typically in a wrapper module), with a
# documented SAFETY block. Everything else stays denied — no shared
# raw pointer tricks, no `unsafe impl Send/Sync`, no inline-asm.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
redundant_closure = "allow"
