[package]
name = "butterfly-extract"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "OSM data processing and extraction for butterfly-osm"

[dependencies]
butterfly-common = { path = "../butterfly-common" }
butterfly-io = { path = "../butterfly-io" }
butterfly-plan = { path = "../butterfly-plan" }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }