[package]
name = "butterfly-extract"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "OSM data processing and extraction for butterfly-osm"

[dependencies]
butterfly-common = { path = "../butterfly-common" }
butterfly-io = { path = "../butterfly-io" }
tokio = { workspace = true }
thiserror = { workspace = true }
osmpbf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = "5.2"

[dev-dependencies]
tempfile = { workspace = true }