[package]
name = "butterfly-routing"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Core routing algorithms and graph processing for butterfly-osm"

[dependencies]
butterfly-common = { path = "../butterfly-common" }
butterfly-io = { path = "../butterfly-io" }
butterfly-geometry = { path = "../butterfly-geometry" }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rstar = { workspace = true }
spade = { workspace = true }
xxhash-rust = { workspace = true }
bytemuck = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }