[package]
name = "butterfly-serve"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "HTTP routing server for butterfly-osm"

[dependencies]
butterfly-common = { path = "../butterfly-common" }
butterfly-routing = { path = "../butterfly-routing" }
butterfly-geometry = { path = "../butterfly-geometry" }
butterfly-extract = { path = "../butterfly-extract" }
tokio = { workspace = true }
axum = "0.8"
utoipa = "5.2"
utoipa-axum = "0.2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }