[package]
name = "butterfly-geocode"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Geocoder for the butterfly-osm toolkit (Belgium MVP, deterministic forward + reverse)"
keywords = ["osm", "geocoder", "geocoding", "openstreetmap"]
categories = ["api-bindings"]

[dependencies]
butterfly-common = { path = "../butterfly-common" }
# `butterfly-dl::regions` provides the per-region TOML index that
# `build-shards-all` consults to discover authoritative-source files
# (BOSA BeSt for BE, etc.).
butterfly-dl = { path = "../dl" }
clap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

osmpbf = "0.3.8"
rstar = "0.12.2"
rapidfuzz = "0.5"
regex = "1.11"
crc = "3.4"
memmap2 = "0.9"
bytemuck = "1.18"
gbdt = "0.1.3"

# Neural parser (#96 §Tagger, #98 Phase 1).
# candle: pure-Rust tensor + autograd. Apache-2.0 — AGPL-compatible.
# Built without CUDA/MKL/Accelerate features → pure-CPU compute. Note
# that candle-nn pulls `tokenizers` (transitively, for tokenizer
# I/O), which links against `onig_sys` (a small C regex library).
# That's the only native FFI surface in the geocoder build today.
candle-core = { version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }
safetensors = "0.4"
rand = { version = "0.9", features = ["std", "std_rng"] }

axum = "0.8.8"
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout", "catch-panic", "compression-gzip", "compression-br", "limit"] }
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
axum-prometheus = "0.10"
metrics = "0.24"

# gRPC Arrow Flight transport (#145). Same versions butterfly-route uses
# so the workspace links a single tonic/arrow stack.
arrow = { version = "58", default-features = false, features = ["ipc"] }
arrow-flight = "58"
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"
futures = "0.3.32"
futures-util = "0.3.32"
bytes = "1.11.1"
tokio-stream = "0.1.18"
rayon = "1.11"

toml = { workspace = true }
tempfile = { workspace = true }

# BOSA BeSt CSV downloads ship as ZIPs containing one CSV. The
# importer transparently opens either form; `zip` is pure Rust.
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[lints]
workspace = true

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1"

[lib]
name = "butterfly_geocode"
path = "src/lib.rs"

[[bin]]
name = "butterfly-geocode"
path = "src/main.rs"
