[package]
name = "butterfly-route"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
# CLI
clap = { workspace = true }

# Error handling
# `anyhow` is a deliberate choice for the application boundary (CLI, HTTP server).
# Typed errors (`thiserror`) are used in library-level code (formats/, profiles/).
# Migrating all of butterfly-route to thiserror would touch hundreds of functions
# with zero practical benefit — anyhow's context chains are more useful for debugging.
anyhow = "1.0.102"
thiserror = { workspace = true }

# PBF parsing
osmpbf = "0.3.8"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Checksums
crc = "3.4"

# Logging
env_logger = { workspace = true }

# Structured logging (tracing)
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

# SHA-256 hashing
sha2 = "0.11"
hex = "0.4.3"

# Timestamps
chrono = "0.4.44"

# Streaming XML parser for NeTEx-EPIP loader (#101, STIB)
quick-xml = "0.38"

# Coordinate reprojection for NeTEx-EPIP (STIB publishes in Lambert-93
# EPSG:2154; butterfly uses WGS84 throughout). proj4rs is pure Rust,
# no system PROJ dependency.
proj4rs = "0.1"

# Parallelization
rayon = "1.11"

# Fast hashing (FxHashSet for CCH contraction)
rustc-hash = "2.1.2"

# Step 9: Query server
axum = "0.8.8"
tokio = { workspace = true }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
utoipa = { version = "5.4", features = ["axum_extras"] }
# `vendored` embeds the Swagger UI assets at compile time via the
# `utoipa-swagger-ui-vendored` crate. Without it, the build script tries
# to download swagger-ui from GitHub, which is a network dependency we
# don't want at build time (and which sandboxed builds cannot satisfy).
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout", "catch-panic", "compression-gzip", "compression-br"] }

# Spatial indexing & geometry
rstar = "0.12.2"
geo = "0.32"

# Priority queue for Dijkstra
priority-queue = "2.7.0"

# Random number generation for validation
rand = "0.10"

# Benchmarking
hdrhistogram = "7.5.4"

# Arrow streaming for bulk matrix output
arrow = { version = "58", default-features = false, features = ["ipc"] }
arrow-flight = "58"
futures = "0.3.32"
futures-util = "0.3.32"
bytes = "1.11.1"
parking_lot = "0.12.5"
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"

# Base64 encoding for WKB in JSON responses
base64 = "0.22.1"

# Prometheus metrics
axum-prometheus = "0.10"

# Transit: GTFS static feed parsing
gtfs-structures = "0.47"
# Transit: GTFS-RT protobuf ingestion (one-shot snapshots applied at
# startup — no polling loop).
# gtfs-rt 0.5 depends on prost 0.11; we expose the matching `Message` trait
# via a renamed `prost_011` dependency so call sites can decode FeedMessage.
gtfs-rt = "0.5"
prost_011 = { package = "prost", version = "0.11" }
# Transit: HTTP client for the `transit-fetch` scraper (rustls TLS)
reqwest = { workspace = true, features = ["rustls"] }
# Transit: TOML config parsing
toml = "0.8"

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
geo = "0.32"
wiremock = { workspace = true }

[[bin]]
name = "butterfly-bench"
path = "src/bench/main.rs"
