[package]
name = "butterfly-route"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
# CLI
clap = { workspace = true }

# Error handling
# `anyhow` is a deliberate choice for the application boundary (CLI, HTTP server).
# Typed errors (`thiserror`) are used in library-level code (formats/, profiles/).
# Migrating all of butterfly-route to thiserror would touch hundreds of functions
# with zero practical benefit — anyhow's context chains are more useful for debugging.
anyhow = "1.0.102"
thiserror = { workspace = true }

# PBF parsing
osmpbf = "0.3.8"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Checksums
crc = "3.4"

# Memory-mapped IO (#90 phase 3): a single mmap of `belgium.butterfly`
# replaces dozens of per-step file reads at startup. The unsafe call
# site is the workspace's sole `unsafe_code` carveout — see
# `route/src/formats/mmap.rs` for the documented SAFETY block.
memmap2 = "0.9"
# `libc::madvise` against ranges of the mmap above. Same `unsafe_code`
# carveout as `memmap2::Mmap::map` — see `formats/mmap.rs::madvise_dontneed`.
# Used after #149 to drop the cch_weights.up/.down byte ranges from RSS
# once the routing hot path stops reading them (the migration to flat
# adjacencies in steps A–C kept the only remaining readers cold).
libc = "0.2"

# Safe POD slice reinterpretation for zero-copy mmap views (#147).
# `bytemuck::cast_slice` performs alignment + size checks at runtime and
# wraps the only `unsafe` (slice-of-u8 → slice-of-u32) in its own well-
# audited internal carveout. The workspace's `unsafe_code` lint stays
# `deny` everywhere outside `formats/mmap.rs`.
bytemuck = { version = "1.16", features = ["derive"] }

# Logging
env_logger = { workspace = true }

# Structured logging (tracing)
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

# SHA-256 hashing
sha2 = "0.11"
hex = "0.4.3"
butterfly-dl = { path = "../dl" }

# Timestamps
chrono = "0.4.44"

# Streaming XML parser for NeTEx-EPIP loader (#101, STIB)
quick-xml = "0.39"

# Coordinate reprojection for NeTEx-EPIP (STIB publishes in Lambert-93
# EPSG:2154; butterfly uses WGS84 throughout). proj4rs is pure Rust,
# no system PROJ dependency.
proj4rs = "0.1"

# Parallelization
rayon = "1.11"

# Fast hashing (FxHashSet for CCH contraction)
rustc-hash = "2.1.2"

# Step 9: Query server
axum = "0.8.8"
tokio = { workspace = true }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
utoipa = { version = "5.4", features = ["axum_extras"] }
# `vendored` embeds the Swagger UI assets at compile time via the
# `utoipa-swagger-ui-vendored` crate. Without it, the build script tries
# to download swagger-ui from GitHub, which is a network dependency we
# don't want at build time (and which sandboxed builds cannot satisfy).
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout", "catch-panic", "compression-gzip", "compression-br"] }

# Spatial indexing & geometry
rstar = "0.12.2"
geo = "0.33"

# Priority queue for Dijkstra
priority-queue = "2.7.0"

# Random number generation for validation
rand = "0.10"

# Benchmarking
hdrhistogram = "7.5.4"

# Arrow streaming for bulk matrix output
arrow = { version = "58", default-features = false, features = ["ipc"] }
arrow-flight = "58"
futures = "0.3.32"
futures-util = "0.3.32"
bytes = "1.11.1"
parking_lot = "0.12.5"
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"

# Base64 encoding for WKB in JSON responses
base64 = "0.22.1"

# Prometheus metrics
axum-prometheus = "0.10"
# Direct `metrics` macros for app-level counters/gauges/histograms
# (per-region query metrics, #91; lazy-CRC verification, #160). The
# axum-prometheus layer installs the global recorder at boot; the
# macros below land on the same `/metrics` exporter with no extra
# wiring. Pinned to the major axum-prometheus pulls in transitively
# so we don't end up with two recorder versions.
metrics = "0.24"

# Transit: GTFS static feed parsing
gtfs-structures = "0.47"
# Transit: GTFS-RT protobuf ingestion (one-shot snapshots applied at
# startup — no polling loop).
# gtfs-rt 0.5 depends on prost 0.11; we expose the matching `Message` trait
# via a renamed `prost_011` dependency so call sites can decode FeedMessage.
gtfs-rt = "0.5"
prost_011 = { package = "prost", version = "0.11" }
# Transit feed downloads now delegate to butterfly-dl's `verified`
# module (#100). The HTTP stack lives there; route no longer needs
# a direct reqwest dep. Feed config + orchestration + GTFS parsing
# stay in this crate; bytes-off-the-wire live in butterfly-dl.
# Transit: TOML config parsing
toml = "1.1"

# zstd compression for cold container sections (#347 — way_names_idx
# and snap_grid). Pure-Rust binding to the upstream zstd C library;
# uses the bundled C source so no system dep. Level-3 chosen as the
# fast-decompress sweet spot — boot-time decompression is single-
# digit ms per section on Belgium.
zstd = "0.13"

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
geo = "0.33"
wiremock = { workspace = true }

[[bin]]
name = "butterfly-bench"
path = "src/bench/main.rs"
