[package]
name = "scratch-gbdt"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
publish = false

[workspace]

[dependencies]
# Pure-Rust GBDT. We are NOT benchmarking lightgbm3 / xgboost-rs because
# they pull in a C++ build dependency (cmake, autoconf for OpenMP) which
# poisons the single-binary deploy story we committed to in #96.
# The shape of the bench (predict on 100 trees, depth-6) approximates the
# reranker's hot path; if pure-Rust GBDT meets latency, native bindings
# can only win marginally and we eat all the FFI ops cost.
gbdt = "0.1"
anyhow = "1"
rand = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
