[package]
name = "phase2-pipeline"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
publish = false

# Standalone — opt out of butterfly-osm workspace. Lives inside
# `geocode-training/` so the parser-team agent owns the Phase 2 corpus
# + labeling tooling end-to-end.
#
# Depends on `butterfly-geocode` via path — we need the executor, the
# heuristic parser, the shard reader, and the Phase 2 feature
# extractor. Pinning to path keeps the version coupling tight.
[workspace]

[dependencies]
butterfly-geocode = { path = "../../geocode" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.6", features = ["derive"] }
rand = "0.9"
rand_chacha = "0.9"
anyhow = "1"
indicatif = "0.17"
rayon = "1.11"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[[bin]]
name = "phase2-corpus"
path = "src/bin_corpus.rs"

[[bin]]
name = "phase2-label"
path = "src/bin_label.rs"
