[package]
name = "butterfly-dl"
version = "2.0.0"
description = "Butterfly-dl - Optimized OpenStreetMap data downloader with HTTP support"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/butterfly-osm/butterfly-dl"
documentation = "https://docs.rs/butterfly-dl"
readme = "../../README.md"
keywords = ["osm", "geofabrik", "pbf", "openstreetmap", "download"]
categories = ["command-line-utilities", "api-bindings"]
edition.workspace = true
exclude = [
    "target/*",
    ".github/*",
    "benchmarks/*",
    "*.md",
    ".gitignore"
]

[lib]
name = "butterfly_dl"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "butterfly-dl"
path = "src/main.rs"

[features]
default = []
c-bindings = []
ci-tests-disabled = []

[dependencies]
butterfly-common = { path = "../../butterfly-common", version = "2.0", features = ["http"] }
reqwest = { workspace = true, features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
clap.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim.workspace = true
tokio.workspace = true
anyhow = "1.0"
indicatif.workspace = true
futures-util = "0.3"
log = "0.4"
env_logger.workspace = true
futures = "0.3"
bytes = "1.0"
once_cell = "1.19"
libc = "0.2"
num_cpus = "1.0"
tokio-util = { version = "0.7", features = ["io"] }

# All dependencies are required for HTTP-only operation

[dev-dependencies]
serde_json = "1.0"
tempfile.workspace = true
ctor.workspace = true
wiremock.workspace = true
tokio-test = "0.4"

# Debian package metadata
[package.metadata.deb]
maintainer = "Pierre <pierre@warnier.net>"
copyright = "2024, Pierre <pierre@warnier.net>"
extended-description = """\
Butterfly-dl is a high-performance, memory-efficient OpenStreetMap data downloader 
with intelligent source routing, resilient networking, and beautiful progress display.
Features include optimized large file handling (<1GB RAM for any file size), 
enhanced progress display, network resilience with smart resume, file safety with 
overwrite protection, and semantic error intelligence with fuzzy matching.
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/butterfly-dl", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/butterfly-dl/", "644"],
    ["LICENSE", "usr/share/doc/butterfly-dl/", "644"],
]
