[package]
name = "butterfly-route"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
# CLI
clap = { workspace = true }

# Error handling
anyhow = "1.0"
thiserror = { workspace = true }

# PBF parsing
osmpbf = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Checksums
crc = "3.2"

# Logging
env_logger = { workspace = true }

# SHA-256 hashing
sha2 = "0.10"
hex = "0.4"

# Timestamps
chrono = "0.4"

# Parallelization
rayon = "1.10"

# Fast hashing (FxHashSet for CCH contraction)
rustc-hash = "2.0"
