[package]
name = "butterfly-route"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
# CLI
clap = { workspace = true }

# Error handling
anyhow = "1.0"
thiserror = { workspace = true }

# PBF parsing
osmpbf = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Checksums
crc = "3.2"

# Logging
env_logger = { workspace = true }

# SHA-256 hashing
sha2 = "0.10"
hex = "0.4"

# Timestamps
chrono = "0.4"

# Parallelization
rayon = "1.10"

# Fast hashing (FxHashSet for CCH contraction)
rustc-hash = "2.0"

# Step 9: Query server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
tower-http = { version = "0.5", features = ["cors"] }

# Spatial indexing
rstar = "0.12"

# Priority queue for Dijkstra
priority-queue = "2.0"

# Random number generation for validation
rand = "0.8"

# Benchmarking
hdrhistogram = "7.5"

# Arrow streaming for bulk matrix output
arrow = { version = "53", default-features = false, features = ["ipc"] }
futures = "0.3"
bytes = "1.5"

[[bin]]
name = "butterfly-bench"
path = "src/bench/main.rs"
